# small_gicp_2d

./: CMakeLists.txt  README.md  main.cpp
include/: downsampling.hpp  general_factor.hpp  gicp_factor.hpp  lie.hpp  normal_estimation.hpp  traits_gicp.hpp
include/ann/: fast_floor.hpp  flat_container.hpp  gaussian_voxelmap.hpp  incremental_voxelmap.hpp  kdtree.hpp  projection.hpp  traits.hpp
include/registration/: optimizer.hpp  reduction.hpp  registration.hpp  registration_helper.hpp  registration_result.hpp  rejector.hpp  termination_criteria.hpp
src/: registration_help.cpp
